<resources>
    <string name="app_name">BurnedCaloriesCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="heightLabel">Height</string>
    <string name="bmiLabel">BMI</string>
    <string name="weightLabel">Weight</string>
    <string name="milesRanLabel">Miles Ran:</string>
    <string name="caloriesBurnedLabel">Calories Burned</string>
    <string name="nameLabel">Name</string>
    <string name="milesRanAmount">1</string>
    <string name="caloriesBurnedAmount">00.0</string>
    <string name="bmiAmount">00</string>
    <string name="weightEditText">000</string>
</resources>
