<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rossignol.burnedcaloriescalculator.BurnedCaloriesCalculatorActivity"
    tools:showIn="@layout/activity_burned_calories_calculator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightLabel"
        android:id="@+id/weightLabel"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:paddingEnd="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milesRanLabel"
        android:id="@+id/milesRanLabel"
        android:layout_below="@+id/weightLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caloriesBurnedLabel"
        android:id="@+id/caloriesBurnedLabel"
        android:layout_below="@+id/milesRanLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heightLabel"
        android:id="@+id/heightLabel"
        android:layout_below="@+id/caloriesBurnedLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiLabel"
        android:id="@+id/bmiLabel"
        android:layout_below="@+id/heightLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        android:id="@+id/nameLabel"
        android:layout_below="@+id/bmiLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="91dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milesRanAmount"
        android:id="@+id/milesRanAmount"
        android:layout_above="@+id/caloriesBurnedLabel"
        android:layout_toEndOf="@+id/milesRanLabel"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/caloriesBurnedAmount"
        android:id="@+id/caloriesBurnedAmount"
        android:textSize="20sp"
        android:layout_alignTop="@+id/caloriesBurnedLabel"
        android:layout_alignStart="@+id/milesRanSeekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiAmount"
        android:id="@+id/bmiAmount"
        android:layout_alignTop="@+id/bmiLabel"
        android:layout_toEndOf="@+id/milesRanAmount"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameEditText"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/nameLabel"
        android:layout_toEndOf="@+id/milesRanAmount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightEditText"
        android:text="@string/weightEditText"
        android:inputType="number"
        android:textSize="20sp"
        android:layout_above="@+id/milesRanLabel"
        android:layout_toEndOf="@+id/milesRanLabel" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feetSpinner"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/heightLabel"
        android:layout_toEndOf="@+id/heightLabel"
        android:entries="@array/feetAmount"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inchesSpinner"
        android:spinnerMode="dropdown"
        android:entries="@array/inchesAmount"
        android:layout_alignTop="@+id/feetSpinner"
        android:layout_alignStart="@+id/caloriesBurnedAmount" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/milesRanSeekBar"
        android:layout_above="@+id/caloriesBurnedLabel"
        android:layout_toEndOf="@+id/caloriesBurnedLabel"
        android:layout_marginStart="42dp"
        android:indeterminate="false"
        android:max="30"
        android:progress="10" />
</RelativeLayout>
